# gd-mod-template

./: .gitmodules  CMakeLists.txt  README.md
src/: includes.hpp  main.cpp
